--- a/BackendCapstone/BackendCapstone.csproj
+++ b/BackendCapstone/BackendCapstone.csproj
@@ -206,7 +206,9 @@
   <ItemGroup>
     <Content Include="app\app.js" />
     <Content Include="app\controllers\HomeController.js" />
+    <Content Include="app\controllers\TeachersController.js" />
     <Content Include="app\partials\index.html" />
+    <Content Include="app\partials\teachersList.html" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
