working on edit teacher info

--- a/BackendCapstone/BackendCapstone.csproj
+++ b/BackendCapstone/BackendCapstone.csproj
@@ -205,8 +205,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\EditTeacherInfoController.js" />
     <Content Include="app\controllers\HomeController.js" />
     <Content Include="app\controllers\TeachersController.js" />
+    <Content Include="app\partials\editTeacherInfo.html" />
     <Content Include="app\partials\index.html" />
     <Content Include="app\partials\teachersList.html" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
