locations printing to page

--- a/BackendCapstone/BackendCapstone.csproj
+++ b/BackendCapstone/BackendCapstone.csproj
@@ -205,11 +205,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\EditLocationController.js" />
     <Content Include="app\controllers\EditTeacherInfoController.js" />
     <Content Include="app\controllers\HomeController.js" />
+    <Content Include="app\controllers\LocationsController.js" />
     <Content Include="app\controllers\TeachersController.js" />
+    <Content Include="app\partials\editLocation.html" />
     <Content Include="app\partials\editTeacherInfo.html" />
     <Content Include="app\partials\index.html" />
+    <Content Include="app\partials\locations.html" />
     <Content Include="app\partials\teachersList.html" />
     <Content Include="Areas\HelpPage\HelpPage.css" />
     <Content Include="Content\bootstrap-theme.css" />
