--- a/BackendCapstone/BackendCapstone.csproj
+++ b/BackendCapstone/BackendCapstone.csproj
@@ -188,6 +188,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LocationsController.cs" />
+    <Compile Include="Controllers\ReportsController.cs" />
     <Compile Include="Controllers\StudentLocationsController.cs" />
     <Compile Include="Controllers\StudentsController.cs" />
     <Compile Include="Controllers\TeachersController.cs" />
@@ -196,12 +197,15 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\LocationModel.cs" />
+    <Compile Include="Models\HomeroomReportModel.cs" />
+    <Compile Include="Models\LocationReportModel.cs" />
     <Compile Include="Models\StudentInfoDTO.cs" />
     <Compile Include="Models\StudentLocationsModel.cs" />
     <Compile Include="Models\StudentModel.cs" />
     <Compile Include="Models\TeacherModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\LocationsRepository.cs" />
+    <Compile Include="Services\ReportsRepository.cs" />
     <Compile Include="Services\StudentLocationsRepository.cs" />
     <Compile Include="Services\StudentsRepository.cs" />
     <Compile Include="Services\TeachersRepository.cs" />
